--- a/static/userprofile/userprofileadminstyle.css
+++ b/static/userprofile/userprofileadminstyle.css
@@ -99,244 +99,249 @@ input, select {
 /*
 Start coding here
 */
+
+/* #region Body */
 body {
-    line-height:1;
-    line-height:1;
-    height: 100%;
-    width : 100%;
-    min-height : 100vh;
-    background: rgb(255, 255, 255);
-    margin: 0; 
-    overflow-x: hidden;
-    overflow-y : scroll;
-    font-family: Arial, sans-serif;
-    padding-top: 100px;
-  }
-  
-  .head {
-    display: flex;
-    background-color: orange;
-    padding: 10px;
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: rgb(113,26,33); 
-    padding: 5px;
-    border-bottom: 20px solid rgb(230,124,55);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-  }
-  
-  .left-section {
-    width: 100px;
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    flex-shrink: 0;
-  }
-  
-  .lspu-logo{
-    width: 90px;
-    border-radius:50px;
-  }
-  
-  .middle-section {
-    flex: 1 !important;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
-    display: flex !important;
-    align-items: center !important;
-  }
-  
-  form {
-    display: flex !important;
-    flex: 1 !important;
-    align-items: center !important;
-  }
-  
-  .search-bar {
-    display: flex;
-    flex: 1;
-    height: 14px;
-    padding: 10px;
-    margin: 5px;
-    border: none;
-    border-radius: 3px;
-    outline: none;
-    background-color: white;
-    color: #000000;
-    font-size: 15px;
-    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
-    width: 0;
-  }
-  
-  .search-bar::placeholder{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px; 
-    
-  }
-  
-  .search-button {
-    background-color: rgb(230,124,55) !important; 
-     color: #ffffff !important;
-    padding: 10px 15px !important;
-    border: none !important;
-    border-radius: 3px !important;
-    margin-right: 10px !important;
-    cursor: pointer !important;
-    width: fit-content !important;
-    height: 40px;
-    margin-top: 7px;
-  } 
-  
-  .search-button:hover  {
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) !important;
-  }
-  
-  .right-section {
-    width: 100px;
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-    flex-shrink: 0;
-  }
-  
-  .ccs-logo{
-    width: 92px;
-    border-radius:46px;
-  }
-  
-  
-  .buttons-box {
-    background-color: rgb(255, 255, 255);
-    padding-top: 3px;
-    padding-bottom: 3px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); 
-    margin-top: 40px;
-    margin-left: 70px;
-    margin-right: 70px;
-    border-radius: 5px;
-  }
-  
-  .button-grid{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 5px;
-    flex-wrap: wrap;
-    align-content: first baseline;
-    gap: 1em;
-  }
-  
-  .buttons-tabs {
-    background-color: rgb(255,255,255);
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    vertical-align: top;
-    transition-duration: 0.4s;
-  }
-    
-  .buttons-tabs:hover  {
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  }
-  
-  .buttons-tabs:active {
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  }
-  
-  a{
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-    font-family: Arial;
-  }
-  
-  a:link { 
-    text-decoration: none; 
-  } 
-  
-  a:hover { 
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  } 
-  
-  a:active { 
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  } 
+  line-height:1;
+  height: 100%;
+  width : 100%;
+  min-height : 100vh;
+  background: rgb(255, 255, 255);
+  margin: 0; 
+  overflow-x: hidden;
+  overflow-y : scroll;
+  font-family: Arial, sans-serif; 
+  padding-top: 100px;
+}
+/* #endregion */
 
-  .account-heading{
-    font-size: 30px;
-  }
+/* #region Header */
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(113,26,33); 
+  padding: 5px;
+  border-bottom: 20px solid rgb(230,124,55); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
 
-  .text-secondary{
-    margin-top: 12px;
-  }
+.left-section {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  flex-shrink: 0;
+}
 
-  .btn{
-    margin-right: 10px;
-    border: 2px solid orange;
-    font-size: 18px;
-    font-weight: 500;
-    background-color: white;
-  }
-  .btn:hover{
-    background-color: orange;
-    
-  }
+.lspu-logo{
+  width: 90px;
+  border-radius:50px;
+}
 
-  .form-container{
-    margin-left: 50px;
-    margin-top: 50px;
-  }
+.middle-section {
+  flex: 1 !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  display: flex !important;
+  align-items: center !important;
+}
 
-  .form-group{
-    margin-top: 12px;
-    
-  }
-  .border-bottom{
-    font-size: 25px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
+.middle-section form {
+  display: flex;
+  flex: 1 !important;
+  align-items: center !important;
+}
 
-  #wrapper {
-    border: 1px solid black;
-    margin: 10px;
-    padding: 10px;
-    background-color: #f9f9f9; 
-    border-radius: 10px;
-  }
+.middle-section input[type="text"] {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  height: 40px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 20px;
+}
 
-  .form{
-    background-color: #f8f9fa;
-    padding: 15px 0;
-    border: 2px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; 
-    border-radius: 15px;
-  }
+.search-bar {
+  display: flex;
+  flex: 1;
+  height: 14px;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  background-color: white;
+  color: #000000; 
+  font-size: 15px;
+  box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+  width: 0;
+}
 
-  a {
-    text-decoration: none;
-    color: black;
-  }
+.search-bar::placeholder{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; 
+  
+}
 
+.search-button {
+  background-color: rgb(230,124,55) !important; 
+   color: #ffffff !important;
+  padding: 10px 15px !important;
+  border: none !important;
+  border-radius: 3px !important;
+  margin-right: 10px !important;
+  cursor: pointer !important;
+  width: fit-content !important;
+  height: 40px;
+  margin-top: 7px;
+} 
+
+.search-button:hover  {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) !important;
+}
+
+.right-section {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  flex-shrink: 0;
+}
+
+.ccs-logo{
+  width: 92px;
+  border-radius:46px;
+}
+
+/* #endregion */
+  
+/* #region Navigation */
+.buttons-box {
+  background-color: rgb(255, 255, 255);
+  padding-top: 3px;
+  padding-bottom: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); 
+  margin-top: 40px;
+  margin-left: 70px;
+  margin-right: 70px;
+  border-radius: 5px;
+}
+
+.button-grid{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 5px;
+  flex-wrap: wrap;
+  align-content: first baseline;
+  gap: 1em;
+}
+
+.buttons-tabs {
+  background-color: rgb(255,255,255);
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  vertical-align: top;
+  transition-duration: 0.4s;
+}
+  
+.buttons-tabs:hover  {
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+.buttons-tabs:active {
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+a{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  font-family: Arial;
+}
+
+a:link { 
+  text-decoration: none; 
+} 
+
+a:hover { 
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+
+a:active { 
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+/* #endregion */
+
+/* #region Main container */
+.form{
+  margin-top: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 15px 0;
+  border: 2px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
+  margin: 30px 70px 0; 
+  border-radius: 15px;
+}
+/* #endregion */
+
+/* #region Profile */
+.profile_contain {
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+  margin-left: 50px;
+}
+
+.profile_contain img {
+  max-width: 200px;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile_information {
+  margin-left: 30px;
+}
+
+.account-heading{
+  font-size: 30px;
+}
+
+.text-secondary{
+  margin-top: 12px;
+}
+
+.btn{
+  margin-right: 10px;
+  border: 2px solid orange;
+  font-size: 18px;
+  font-weight: 500;
+  background-color: white;
+}
+.btn:hover{
+  background-color: orange;
+  
+}
+/* #endregion */
+
+/* #region Mobile */
   @media screen and (max-width: 768px) {
     header {
       flex-direction: column;
@@ -425,3 +430,4 @@ body {
   }
   
   }
+/* #endregion */
