--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -31,6 +31,7 @@
                 <a href="{% url 'admin_unreturned' %}" class="buttons-tabs">Unreturned</a>
                 <a href="{% url 'members' %}" class="buttons-tabs">Users</a>
                 <a href="{% url 'admin_userprofile' %}" class="buttons-tabs">Account</a>
+                <a href="{% url 'admin:index' %}" class="buttons-tabs">Admin Panel</a>
                 <a href="{% url 'logout' %}" class="buttons-tabs">Logout</a>
             </div>
         </nav>
