--- a/templates/userprofile/editprofileadmin.html
+++ b/templates/userprofile/editprofileadmin.html
@@ -2,30 +2,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'userprofile/userprofileadminstyle.css' %}">
+        <link rel="stylesheet" href="{% static 'userprofile/editprofile.css' %}">
+
         <title>Edit Profile</title>
     </head>
-<body>
+    <body>
+        <div class="header">
+            <div class="left-section">
+                <img class="lspu-logo" src="{% static 'home/logo/lspu-logo.png' %}">
+            </div>
 
-    <div class="header">
-            
-        <div class="left-section">
-            <img class="lspu-logo" src="{% static 'home/logo/lspu-logo.png' %}">
+            <div class="middle-section">
+                <form method="GET" action="{% url 'search_items_admin' %}">
+                    <input class="search-bar" type="text" placeholder="Search for name/id/category" name="q" value="{{ query }}">
+                    <input class="search-button" type="submit" value="Search">
+                </form>
+            </div>
+
+            <div class="right-section">
+                <img class="ccs-logo" src="{% static 'home/logo/ccs-logo.jpg' %}">
+            </div>
         </div>
 
-        <div class="middle-section">
-            <form method="GET" action="{% url 'search_items_admin' %}">
-                <input class="search-bar" type="text" placeholder="Search for name/id/category" name="q" value="{{ query }}">
-                <input class="search-button" type="submit" value="Search">
-            </form>
-        </div>
-
-        <div class="right-section">
-            <img class="ccs-logo" src="{% static 'home/logo/ccs-logo.jpg' %}">
-        </div>
-        
-    </div>
-    <div class="head"></div>
         <nav class="buttons-box">
             <div class="button-grid">
                 <a href="{% url 'admin_home' %}" class="buttons-tabs">Home</a>
@@ -33,44 +31,51 @@
                 <a href="{% url 'admin_unreturned' %}" class="buttons-tabs">Unreturned</a>
                 <a href="{% url 'members' %}" class="buttons-tabs">Users</a>
                 <a href="{% url 'admin_userprofile' %}" class="buttons-tabs">Account</a>
+                <a href="{% url 'admin:index' %}" class="buttons-tabs">Admin Panel</a>
                 <a href="{% url 'logout' %}" class="buttons-tabs">Logout</a>
             </div>
         </nav>
-    <div id="mainForm" class="form">
-        <div id="container" class="rounded_corners">
-            <div class="form-container">
-                <form method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <fieldset class="form-group">
-                        <legend class="border-bottom mb-4">EDIT PROFILE INFORMATION</legend>
+
+        <div id="mainForm" class="form">
+            <div id="container" class="rounded_corners">
+                <div class="form-container">
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                            <legend class="border-bottom mb-4">EDIT PROFILE INFORMATION</legend>
+                            <div class="form-group">
+                                <label for="id_username">Username</label>
+                                <input type="text" class="form-control" id="id_username" name="username" value="{{ user.username }}">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="id_email">Email</label>
+                                <input type="email" class="form-control" id="id_email" name="email" placeholder="Enter email">
+                            </div>
+                            
+                            <div class="form-group">
+                                <label for="id_account_name">Account Name</label>
+                                <input type="text" class="form-control" id="id_account_name" name="account_name" placeholder="Enter account name">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="id_contact_number">Contact Number</label>
+                                <input type="text" class="form-control" id="id_contact_number" name="contact_number" placeholder="Enter contact number">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="id_image">Profile Image</label>
+                                <input type="file" class="form-control-file"  id="id_image" name="image">
+                            </div>
+                        </fieldset>
+
                         <div class="form-group">
-                            <label for="id_username">Username</label>
-                            <input type="text" class="form-control" id="id_username" name="username" value="{{ user.username }}">
+                            <button class="btn btn-outline-info" type="submit">Update</button>
                         </div>
-                        <div class="form-group">
-                            <label for="id_email">Email</label>
-                            <input type="email" class="form-control" id="id_email" name="email" placeholder="Enter email">
-                        </div>
-                        <div class="form-group">
-                            <label for="id_account_name">Account Name</label>
-                            <input type="text" class="form-control" id="id_account_name" name="account_name" placeholder="Enter account name">
-                        </div>
-                        <div class="form-group">
-                            <label for="id_contact_number">Contact Number</label>
-                            <input type="text" class="form-control" id="id_contact_number" name="contact_number" placeholder="Enter contact number">
-                        </div>
-                        <div class="form-group">
-                            <label for="id_image">Profile Image</label>
-                            <input type="file" class="form-control-file"  id="id_image" name="image">
-                        </div>
-                    </fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-outline-info" type="submit">Update</button>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
 
